[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saiteki-scout"
version = "1.0.2"
description = "Static Time and Space Complexity Analyzer for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "Harihara Suthan S"}
]

keywords = [
    "complexity-analysis",
    "time-complexity",
    "space-complexity",
    "algorithm-analysis",
    "ast",
    "python"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Education"
]

dependencies = [
    "sympy>=1.12",
    "matplotlib>=3.8"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/Saiteki_Scout"
Issues = "https://github.com/YOUR_USERNAME/Saiteki_Scout/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]